<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Demo app</string>
    <string name="database" tools:ignore="MissingTranslation">DEMOAPP.db</string>
    <string name="error_not_found" tools:ignore="MissingTranslation">Không tìm thấy dữ liệu</string>
    <string name="error_unknown" tools:ignore="MissingTranslation">Lỗi không xác định</string>
    <string name="error_body_null" tools:ignore="MissingTranslation">Dữ liệu không có</string>
    <string name="error_login_fails" translatable="false">Tên đăng nhập hoặc mật khẩu không đúng</string>

    <string name="login_title_phone_number" tools:ignore="ExtraTranslation">Nhập số điện thoại</string>
    <string name="login_title_password" tools:ignore="ExtraTranslation">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="text_hint_input_email" tools:ignore="ExtraTranslation">Your email</string>

    <string name="permission_required">Ứng dụng cần các quyền này để có thể hoạt động. Vui lòng cấp quyền!</string>
    <string name="notification" translatable="false">Thông báo</string>

    <string name="confirm" translatable="false">Xác nhận</string>
    <string name="language_vietnamese" tools:ignore="ExtraTranslation">Tiếng Việt (VI)</string>
    <string name="language_english" tools:ignore="ExtraTranslation">Tiếng Anh (EN)</string>

    <string name="title_choose_language">Chọn ngôn ngữ</string>
    <string name="choose_english">Tiếng Anh</string>
    <string name="choose_vietnamese">Tiếng việt</string>
    <string name="tittle_out_of_application">Bạn chắc chắn muốn thoát khỏi ứng dụng?</string>
    <string name="msg_confirm_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="label_version_common">Phiên bản</string>
    <string name="versionDefault">1.0.0</string>

    <string name="mess_network_unavailable_tip" tools:ignore="MissingTranslation">Mất kết nối internet, vui lòng kiểm tra lại!</string>
    <string name="title_text_header_main">Well come to Android Test</string>
    <string name="title_text_content_main">Please select categories what you would like to see on your feed. You can set this later on Filter.</string>
    <string name="title_text_choose">Done</string>
    <string name="sign_up_hint_input_last_name">your last name</string>
    <string name="sign_up_hint_input_first_name">Your first name</string>
    <string name="error_signup_fails">registration information is incorrect or already exists</string>
    <string name="error_signup_success_login_fails">You have successfully registered but an error occurred while logging in, please login again</string>
    <string name="title_login">Login</string>
    <string name="title_years_old">I am over 16 years of age</string>
    <string name="title_signup">Signup</string>

</resources>
