<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/real_header_height"
            app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spaces_medium"
                android:layout_marginRight="@dimen/spaces_medium"
                android:paddingLeft="@dimen/spaces_normal"
                android:paddingTop="@dimen/spaces_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingRight="@dimen/spaces_normal"
                android:paddingBottom="@dimen/spaces_normal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editEmail"
                        style="@style/EditTextStyle.Login"
                        android:hint="@string/text_hint_input_email" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spaces_medium" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editPassword"
                        style="@style/EditTextStyle.Login"
                        android:hint="@string/login_title_password"
                        android:inputType="textPassword" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spaces_medium" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editLastName"
                        style="@style/EditTextStyle.Login"
                        android:hint="@string/sign_up_hint_input_last_name"
                        android:inputType="text" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spaces_medium" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editFirstName"
                        style="@style/EditTextStyle.Login"
                        android:hint="@string/sign_up_hint_input_first_name"
                        android:inputType="text" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spaces_medium" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:text="@string/title_years_old"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    style="@style/TextContentStyle"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/space_20"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10"
                android:layout_gravity="center"
                android:text="@string/title_login"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/white"
                style="@style/TextContentStyle"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/ButtonStyle.Login"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/login"
                android:textAllCaps="true" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
